--- a/bai_11/bai_tap_1/bai_tap_1/build.gradle
+++ b/bai_11/bai_tap_1/bai_tap_1/build.gradle
@@ -24,6 +24,8 @@ tasks.withType(JavaCompile) {
 dependencies {
   compileOnly('javax.servlet:javax.servlet-api:4.0.1')
   implementation("javax.servlet:jstl:1.2")
+  // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+  implementation("mysql:mysql-connector-java:8.0.33")
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
